--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: homo-sapiens
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public
-    username: postgres
-    password: restinga@2025
+    url: ${HS_DB_STRING_CONEXAO:jdbc:postgresql://localhost:5432/postgres?currentSchema=public}
+    username: ${HS_DB_USERNAME:postgres}
+    password: ${HS_DB_PASSWORD:restinga@2025}
   jpa:
     hibernate:
       ddl-auto: update
