Criado suporte a mensageria RabbitMQ

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+amqp:
+    neandertal:
+      listener-queue: fila-novo-neandertal
+      producer-queue: fila-retorno-neandertal
