mensageria envio e resposta Neandertal

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,5 +19,5 @@ spring:
     password: guest
 amqp:
     neandertal:
-      listener-queue: fila-novo-neandertal
-      producer-queue: fila-retorno-neandertal
+      listenerQueue: fila-novo-neandertal
+      producerQueue: fila-retorno-neandertal
