--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,18 @@ spring:
     username: guest
     password: guest
 amqp:
-    neandertal:
-      listenerQueue: fila-novo-neandertal
-      producerQueue: fila-retorno-neandertal
+  neandertal:
+    listenerQueue: hominideos.neandertal.entrada
+    retornoQueue: hominideos.neandertal.retorno
+
+  florisience:
+    listenerQueue: hominideos.florisience.entrada
+    retornoQueue: hominideos.florisience.retorno
+
+  denisovano:
+    listenerQueue: hominideos.denisovano.entrada
+    retornoQueue: hominideos.denisovano.retorno
+
+  habilis:
+    listenerQueue: hominideos.habilis.entrada
+    retornoQueue: hominideos.habilis.retorno
