--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     password: ${HS_DB_PASSWORD:restinga@2025}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -17,6 +17,15 @@ spring:
     port: 5672
     username: guest
     password: guest
+  data:
+    mongodb:
+      #uri: mongodb://<username>:<password>@<host>:<port>/<database>
+      database: javaluan
+      host: localhost
+      port: 27017
+      username: javaluan
+      password: 123123
+      authentication-database: javaluan
 amqp:
     neandertal:
       listener-queue: fila-novo-neandertal
